# tic-tac-toe

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deploy.sh  flake.nix  index.html  justfile
assets/: manifest.json  sw.js
benches/: eval_and_gen_move.rs  eval_and_minimax.rs
src/: app.rs  board.rs  fake_par_iter.rs  lib.rs  main.rs  shared.rs  test_utils.rs
src/app/: config.rs  gui.rs  mod.rs
src/normal/: board.rs  mod.rs  test_utils.rs
src/normal/app/: config.rs  gui.rs  mod.rs
src/shared/: board.rs  gui.rs  mod.rs
src/ultimate/: board.rs  mod.rs  test_utils.rs
src/ultimate/app/: config.rs  gui.rs  mod.rs
src/ultimate/board/: mcts.rs  mod.rs
